[package]
name = "problemdetails"
version = "0.4.2"
edition = "2021"
license = "MIT"
description = "Support for Problem Details (RFC-7807 / RFC-9457) responses in HTTP APIs"
homepage = "https://github.com/sazzer/problemdetails/"
repository = "https://github.com/sazzer/problemdetails/"
readme = "README.md"
keywords = ["rfc-7807", "rfc-9457", "http", "problemdetails"]
categories = ["web-programming::http-server", "api-bindings"]

[dependencies]
axum = { version = "0.7.4", optional = true }
tower-http = { version = "0.6.1", features = ["catch-panic"], optional = true }
http = "1.0.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.113", features = ["preserve_order"] }

[dev-dependencies]
assert2 = "0.3.11"
axum-test = "14.3.0"
hyper = { version = "1.1.0", features = ["full"] }
insta = { version = "1.34.0", features = ["json"] }
tokio = { version = "1.36.0", features = ["full"] }

[features]
axum = ["dep:axum", "dep:tower-http"]
