[package]
name = "problemdetails"
version = "0.5.0"
rust-version = "1.78.0"
edition = "2021"
license = "MIT"
description = "Support for Problem Details (RFC-7807 / RFC-9457) responses in HTTP APIs"
homepage = "https://github.com/sazzer/problemdetails/"
repository = "https://github.com/sazzer/problemdetails/"
readme = "README.md"
keywords = ["rfc-7807", "rfc-9457", "http", "problemdetails"]
categories = ["web-programming::http-server", "api-bindings"]

[dependencies]
axum = { version = "0.8.1", optional = true }
tower-http = { version = "0.5.2", features = ["catch-panic"], optional = true }
http = "1.2.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138", features = ["preserve_order"] }
poem = { version = "3.1.9", default-features = false, optional = true }

[dev-dependencies]
assert2 = "0.3.15"
axum-test = "17.2.0"
hyper = { version = "1.6.0", features = ["full"] }
insta = { version = "1.41.1", features = ["json"] }
tokio = { version = "1.43.0", features = ["full"] }
poem = { version = "3.1.9", features = ["test"] }

[features]
axum = ["dep:axum", "dep:tower-http"]
poem = ["dep:poem"]
