[package]
name = "problemdetails"
version = "0.6.0"
rust-version = "1.85.1"
edition = "2021"
license = "MIT"
description = "Support for Problem Details (RFC-7807 / RFC-9457) responses in HTTP APIs"
homepage = "https://github.com/sazzer/problemdetails/"
repository = "https://github.com/sazzer/problemdetails/"
readme = "README.md"
keywords = ["rfc-7807", "rfc-9457", "http", "problemdetails"]
categories = ["web-programming::http-server", "api-bindings"]

[dependencies]
axum = { version = "0.8.9", optional = true }
tower-http = { version = "0.6.8", features = ["catch-panic"], optional = true }
http = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
poem = { version = "3.1.12", default-features = false, optional = true }

[dev-dependencies]
assert2 = "0.4.0"
axum-test = "20.0.0"
hyper = { version = "1.9.0", features = ["full"] }
insta = { version = "1.41.2", features = ["json"] }
tokio = { version = "1.52.1", features = ["full"] }
poem = { version = "3.1.12", features = ["test"] }

[features]
axum = ["dep:axum", "dep:tower-http"]
poem = ["dep:poem"]
