[package]
name = "problemdetails-example-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
problemdetails = { path = "../..", features = ["axum"] }

axum = { version = "0.6.1"}
http = "0.2.8"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = { version = "1.0.89", features = ["preserve_order"] }
tokio = { version = "1.22.0", features = ["full"] }

