[package]
name = "problemdetails-example-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
problemdetails = { path = "../..", features = ["axum"] }

axum = { version = "0.7.4", features = ["macros"] }
http = "1.0.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.113", features = ["preserve_order"] }
tokio = { version = "1.36.0", features = ["full"] }
